# R-type

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  conanfile.txt
client/configurations/entities/: patapata.conf  player1.conf  player2.conf  player3.conf  player4.conf  player_projectile.conf
client/configurations/gui/: ConnectionLost.conf  Controls.conf  CreateRoom.conf  Credits.conf  GameLost.conf  JoinRoom.conf  Menu.conf  Pause.conf  RoomState.conf  Title.conf
client/inc/: AudioManager.hpp  Game.hpp  NetworkManager.hpp  RessourceManager.hpp  StateManager.hpp  Utils.hpp
client/inc/ecs/generic/: Coordinator.hpp  ECSError.hpp
client/inc/ecs/generic/Component/: Component.hpp  ComponentArray.hpp  ComponentManager.hpp  Drawable.hpp  Ennemy.hpp  Hitbox.hpp  Move.hpp  Position.hpp  Rect.hpp  Vector.hpp
client/inc/ecs/generic/Entity/: EntitiesFlyWeight.hpp  Entity.hpp  EntityLoader.hpp  EntityManager.hpp
client/inc/ecs/generic/System/: System.hpp  SystemManager.hpp
client/inc/ecs/specific/: RtypeCoordinator.hpp
client/inc/ecs/specific/System/: PhysicSystem.hpp  RenderSystem.hpp  SpawnEnnemySystem.hpp  collisionSystem.hpp  ennemyBehaviorSystem.hpp  manageProjectileSystem.hpp
client/inc/gui/: AComponent.hpp  AListItem.hpp  Button.hpp  Container.hpp  Label.hpp  PlayerItem.hpp  PlayerList.hpp  RoomItem.hpp  Sprite.hpp  StackPanel.hpp  StateLoader.hpp  TextField.hpp  gui.hpp
client/inc/models/: Player.hpp  Room.hpp
client/inc/network/: ASFMLClient.hpp  SFMLTcpClient.hpp  SFMLTcpSocket.hpp  SFMLUdpClient.hpp  SFMLUdpSocket.hpp
client/inc/states/: ConnectionLostState.hpp  ControlsState.hpp  CreateRoomState.hpp  CreditsState.hpp  GameLostState.hpp  GameState.hpp  JoinRoomState.hpp  MenuState.hpp  ParallaxState.hpp  PauseState.hpp  RoomState.hpp  TitleState.hpp
client/inc/states/meta/: AMenuState.hpp  AState.hpp  SharedContext.hpp  StateStack.hpp  StatesID.hpp
client/src/: EntityLoader.cpp  Game.cpp  main.cpp
client/src/ecs/generic/: Position.cpp
client/src/ecs/generic/Component/: Drawable.cpp  Move.cpp
client/src/ecs/generic/Entity/: EntitiesFlyWeight.cpp  EntityManager.cpp
client/src/gui/: Container.cpp  PlayerItem.cpp  RoomItem.cpp  StackPanel.cpp  StateLoader.cpp  TextField.cpp
client/src/states/: ConnectionLostState.cpp  ControlsState.cpp  CreateRoomState.cpp  CreditsState.cpp  GameLostState.cpp  GameState.cpp  JoinRoomState.cpp  MenuState.cpp  ParallaxState.cpp  PauseState.cpp  RoomState.cpp  StateStack.cpp  TitleState.cpp
common/inc/: TSafeQueue.hpp
common/inc/network/: ASocket.hpp  ATcpSocket.hpp  AUdpSocket.hpp  Packet.hpp  Protocol.hpp
docs/: rfc4242.txt
server/inc/: Room.hpp  RoomsManager.hpp  ServerError.hpp
server/inc/generic/abstract/client/: AClient.hpp  ATcpClient.hpp  UdpClient.hpp
server/inc/generic/abstract/server/: ACompleteServer.hpp  AServer.hpp  AServerController.hpp  ATcpServer.hpp  AUdpServer.hpp
server/inc/generic/asio/client/: AsioTcpClient.hpp
server/inc/generic/asio/server/: AsioTcpServer.hpp  AsioUdpServer.hpp
server/inc/generic/asio/socket/: AsioTcpSocket.hpp  AsioUdpSocket.hpp
server/inc/specific/: RtypeClient.hpp  RtypeServer.hpp  RtypeTcpController.hpp  RtypeTcpServer.hpp  RtypeUdpController.hpp  RtypeUdpServer.hpp
server/src/: RoomsManager.cpp  RtypeTcpController.cpp  RtypeUdpController.cpp  main.cpp
tests/server/: TestRoom.cpp
